# RocketSim

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/motors/: aerotech_h123w.yaml  example_motor.yaml
configs/rockets/: example_rocket.yaml  loc_iv.yaml
docs/rocketsim-docs/: phase1-designit.md  phase2-designit.md  rocketsim-designit.md
src/rocketsim/: __init__.py  __main__.future  __main__.py
src/rocketsim/commands/: cli.py
src/rocketsim/models/: __init__.py  motor.py  rocket.py  simulation.py
src/rocketsim/physics/: __init__.py  flight.py
src/rocketsim/services/: __init__.py  simulation_service.py
tests/: test_app_metadata.py
tests/models/: test_motor.py  test_rocket.py
tests/physics/: test_flight.py
tests/services/: test_simulation_service.py
tools/: avery_labels.py  build.ini  create_epic_labels_from_csv.py  create_issues_from_csv.py  create_labels_from_csv.py  create_milestones_from_csv.py  create_packit_cli_scaffold.sh  dashboard.py  epics.csv  extract_google_sheet_ids.py  extract_room_colors.py  generate_qr_codes.py  issues.csv  list_all_folders.py  list_rooms_under_parent.py  milestones.csv  points.csv  project_tree.py  release.py  release_summary.py  summarize_file_types.py  test.py
tools/dev-docs/: BUILD.md  CHANGEIT.md  CLOSEOUT-r3.md  DESIGNIT.md  DOCSTRINGS.md  FINISHIT.md  GITHUB.md  NEWPROJECT.md  POSTMERGE.md  UBUNTU.md
