[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rocketsim"
version = "2026.6.0"
description = "Model Rocket Flight Simulation and Launch Planning"
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]